<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.juzhang.bicycle.Activity.LoginActivity">
    <RelativeLayout
        android:id="@+id/home_head"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_home_head"
        android:layout_height="45dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_login"
            android:textSize="18sp"
            android:gravity="center" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="backPress"
            android:src="@drawable/ic_left" />
    </RelativeLayout>
    <com.loopj.android.image.SmartImageView
        android:id="@+id/siv_login_userimage"
        android:layout_marginTop="20dp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/icon_user"
        android:layout_gravity="center"
        />
    <com.example.juzhang.bicycle.View.ClearEditText
        android:id="@+id/cet_login_username"
        android:drawableLeft="@drawable/icon_user_m"
        android:hint="@string/tv_pleaseinputusername"
        style="@style/EditTextStyle" />
    <com.example.juzhang.bicycle.View.ClearEditText
        android:id="@+id/cet_login_password"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/icon_lock_m"
        android:inputType="textPassword"
        android:hint="@string/tv_pleaseinputpassword"
        style="@style/EditTextStyle" />
    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:enabled="false"
        android:background="@drawable/selector_login_btnlogin_bg"
        android:layout_margin="20dp"
        android:textColor="@drawable/selector_login_textlogin_bg"
        android:text="@string/tv_login"
        android:textSize="17sp"
        />
    <TextView
        android:id="@+id/tv_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/tv_register"
        />
    <TextView
        android:id="@+id/tv_login_forgetpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:paddingLeft="30dp"
        android:text="@string/tv_forgetpassword"
        />
</LinearLayout>
