<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:juzhangextraitem="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical"
    android:layout_alignParentBottom="true">
    <LinearLayout
        android:background="#FFFFFF"
        android:id="@+id/ll_order_choiseridetype"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="300dp">
        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/tv_chooseridetype"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_itemaround_line"
            >
            <com.example.juzhang.bicycle.View.MyOrderExtraItem
                android:id="@+id/moei_order_ridetoyou"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                juzhangextraitem:extraitemtext="@string/tv_ridetoyou"
                juzhangextraitem:checked="true">
            </com.example.juzhang.bicycle.View.MyOrderExtraItem>
            <com.example.juzhang.bicycle.View.MyOrderExtraItem
                android:id="@+id/moei_order_ridetoyouself"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/shape_order_num"
                juzhangextraitem:extraitemtext="@string/tv_ridetoyouself">
            </com.example.juzhang.bicycle.View.MyOrderExtraItem>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_order_chooseridetype_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:onClick="buttonClick"
            android:textColor="#fe8300"
            android:text="@string/tv_close"
            />
    </LinearLayout>
</RelativeLayout>