<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:juzhangextraitem="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juzhang.bicycle.Activity.OrderActivity"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#e9e9e9"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <!--头部-->
        <RelativeLayout
            android:id="@+id/ll_order_head"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:background="@drawable/shape_home_head"
            android:layout_height="45dp"
            >
            <TextView
                android:id="@+id/tv_order_head_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/tv_startrental"
                android:textSize="18sp"
                android:gravity="center" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="backPress"
                android:contentDescription="@string/iv_picture"
                android:src="@drawable/ic_left" />
        </RelativeLayout>
        <!--中间-->
        <com.example.juzhang.bicycle.View.MyScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <!--配送方式-->
                <RelativeLayout
                    android:id="@+id/rl_order_distributiontype"
                    android:onClick="buttonClick"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/selector_order_distributiontype_bg"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="60dp">
                    <TextView
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tv_distribution" />
                    <TextView
                        android:id="@+id/tv_order_distributiontype"
                        android:layout_alignParentRight="true"
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/tv_ridetoyou"
                        />
                </RelativeLayout>
                <!--联系信息-->
                <com.example.juzhang.bicycle.View.ClearEditText
                    android:id="@+id/cet_order_inputaddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/shape_itemtop_line"
                    android:hint="@string/tv_inputaddress"
                    android:inputType="textMultiLine"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_order_contact_ridetoyouself"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:background="@drawable/selector_order_distributiontype_bg"
                    android:text="@string/tv_shopaddress" />


                <!--车品信息-->
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:id="@+id/ll_order_bicycledetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                </LinearLayout>
                <!--留言-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="#FFFFFF">

                    <EditText
                        android:id="@+id/et_order_leave"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/shape_itemaround_line"
                        android:gravity="top"
                        android:hint="@string/tv_inputleave"
                        android:inputType="textMultiLine"
                        android:padding="10dp"
                        android:textSize="15sp" />
                </LinearLayout>
                <!--活动-->
                <LinearLayout
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:background="#FFFFFF"
                    android:layout_height="wrap_content">
                    <com.example.juzhang.bicycle.View.MyOrderExtraItem
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        juzhangextraitem:extraitemtext="匿名购买"
                        />
                    <com.example.juzhang.bicycle.View.MyOrderExtraItem
                        android:background="@drawable/shape_order_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        juzhangextraitem:extraitemtext="使用优惠券"
                        />
                    <com.example.juzhang.bicycle.View.MyOrderExtraItem
                        android:background="@drawable/shape_order_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        juzhangextraitem:extraitemtext="使用延时保险"
                        />
                </LinearLayout>
            </LinearLayout>
        </com.example.juzhang.bicycle.View.MyScrollView>
        <!--脚部-->
        <LinearLayout
            android:gravity="center_vertical"
            android:background="@drawable/shape_itemtop_line"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <LinearLayout
                android:layout_width="0dp"
                android:paddingRight="20dp"
                android:layout_weight="1"
                android:gravity="end"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/tv_sumprice"
                    />
                <TextView
                    android:id="@+id/tv_order_payforride"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/tv_￥"
                    />
                <TextView
                    android:id="@+id/tv_order_sumprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="#ff0033"
                    android:text="@string/tv_unknown"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btn_order_submit"
                android:layout_alignParentRight="true"
                android:onClick="buttonClick"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/selector_btn_submit_bg"
                android:layout_width="wrap_content"
                android:text="@string/tv_submit"
                android:textSize="15sp"
                android:textColor="#FFF"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

