<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll_return_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#fe8300"
            android:textSize="17sp"
            android:text="@string/tv_nologinpresstologin"
            />
        <RelativeLayout
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_return_login_bg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_return_login_bg"
                android:contentDescription="@string/iv_picture"
                />
            <ImageView
                android:id="@+id/iv_return_login_bg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_return_login_bg"
                android:contentDescription="@string/iv_picture"
                />
            <ImageView
                android:id="@+id/iv_return_login_bg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_return_login_bg"
                android:contentDescription="@string/iv_picture"
                />
            <com.loopj.android.image.SmartImageView
                android:id="@+id/siv_return_login"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:background="@drawable/selector_return_login"
                />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_return_return"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical"
        >
        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rv_return_display"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dp"
            android:textSize="17sp"
            android:textColor="#fe8300"
            android:text="@string/tv_nocartoreturn"
            />
        <Button
            android:id="@+id/btn_return_return"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:padding="15dp"
            android:layout_margin="20dp"
            android:text="@string/btn_pressreturncar"
            android:textColor="@drawable/selector_login_textlogin_bg"
            android:background="@drawable/selector_retrurn_btnreturn_bg"
            />
    </LinearLayout>
</RelativeLayout>