<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:juzhangextraitem="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/ll_order_content1"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:background="#FFF"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_height="wrap_content">
        <com.loopj.android.image.SmartImageView
            android:id="@+id/siv_order_pic"
            android:src="@drawable/ic_imagefaild"
            android:layout_width="90dp"
            android:layout_marginRight="15dp"
            android:layout_height="90dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/siv_order_pic"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_order_carname"
                android:layout_width="match_parent"
                android:maxLines="2"
                android:text="@string/tv_unknown"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tv_order_spec"
                android:layout_width="match_parent"
                android:maxLines="2"
                android:text="@string/tv_unknown"
                android:paddingTop="5dp"
                android:textColor="#cccccc"
                android:paddingBottom="5dp"
                android:layout_height="wrap_content"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_rentalprivce"
                            />
                        <TextView
                            android:id="@+id/tv_order_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_unknown"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_hour"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/s_sign7"
                            />
                        <TextView
                            android:id="@+id/tv_order_deposit"
                            android:textColor="#ff1155"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_unknown"
                            />
                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_order_buynum"
        android:background="@drawable/shape_order_num"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:text="@string/tv_rentalnumber"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_order_reduce"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_order_reduce_bg"
                android:onClick="buttonClick" />
            <TextView
                android:id="@+id/tv_carnumber"
                android:gravity="center"
                android:textColor="#FF0000"
                android:layout_width="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                />
            <Button
                android:id="@+id/btn_order_add"
                android:onClick="buttonClick"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/selector_order_add_bg"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>